--- a/webresume/frontend/templates/index.html
+++ b/webresume/frontend/templates/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <h1 id="name">Name</h1>
+  <h1 id="name">aame</h1>
   <p id="about">About</p>
   <p id="education">Education</p>
   <p id="skills">Skills</p>
@@ -27,10 +27,12 @@
           $("#about").text(data.data.attributes.about);
           $("#education").text(data.data.attributes.education);
           $("#skills").text(data.data.attributes.skills);
+          $("#work").text(data.data.attributes.work);
+          $("#contact").text(data.data.attributes.contact);
           // Complete consuming the API data and updating the work and contact sections
           // HINT: look at the above lines, jquery documentation, see what is the object returned
-     
-     
+
+
 
      });
   });
